# vbRAT

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/: src.rar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h  handleconnection.cpp  handleconnection.h  handlepty.cpp  handlepty.h  native-lib.cpp  openpty.cpp  vbConnection.cpp  vbConnection.h  vbDeviceProperties.cpp  vbDeviceProperties.h  vbFileExplorer.h  vbRAT.cpp  vbRAT.h  vbTTY.cpp  vbTTY.h
app/src/main/cpp/json/: json-builder.cpp  json-builder.h  json.cpp  json.h
app/src/main/cpp/libzmq/arm64-v8a/: libzmq.la
app/src/main/cpp/libzmq/armeabi-v7a/: libzmq.la
app/src/main/cpp/libzmq/x86/: libzmq.la
app/src/main/cpp/libzmq/x86_64/: libzmq.la
app/src/main/cpp/tiny_websockets_lib/: CMakeLists.txt
app/src/main/cpp/tiny_websockets_lib/src/: linux_tcp.cpp  websockets_endpoint.cpp
app/src/main/java/com/example/vbrat/: BackgroundService.java  BootReceiver.java  DeviceAdminComponent.java  MainActivity.java  ServiceStarter.java  service.java
app/src/main/jniLibs/arm64-v8a/: libzmq.la
app/src/main/jniLibs/armeabi-v7a/: libczmq.la
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: device_admin.xml
gradle/wrapper/: gradle-wrapper.properties
